--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^7.1.2",
-    "nodemon": "^2.0.22"
+    "mongoose": "^7.1.2"
   }
 }
